spacing issue

--- a/wp-content/themes/frautiroler/assets/scss/_card.scss
+++ b/wp-content/themes/frautiroler/assets/scss/_card.scss
@@ -1,12 +1,3 @@
-.project-list{
-    margin-top: 56px;
-    display: flex;
-    justify-content: space-between;
-
-    @media only screen and (max-width: 768px){
-        flex-direction: column;
-        margin-top: 64px;
-    }
 
     .project-item{
         width: 32%;
@@ -114,7 +105,7 @@
             transition: opacity $normal-duration-2 $ease-out;
         }
     }
-}
+
 /*votes*/
 
 .project-votes{
