--- a/wp-content/themes/frautiroler/assets/scss/_single-post.scss
+++ b/wp-content/themes/frautiroler/assets/scss/_single-post.scss
@@ -265,7 +265,7 @@ i{
 
             @media only screen and (max-width: 768px){
                 margin-top: -130px;
-                padding-bottom: 30px;
+                padding-bottom: 0px;
             }
 
             .project-list{
@@ -279,114 +279,8 @@ i{
                 }
 
                 .project-item{
-                    width: 32%;
-                    position: relative;
-
                     @media only screen and (max-width: 768px){
-                        width: 100%;
-                        margin-bottom: 30px;
-                    }
-
-                    .project-image{
-                        overflow: hidden !important;
-                        position: relative !important;
-                        img{
-                            width: 100%;
-                            height: 100%;
-                        }
-                        .overlay{
-                            height: 100%;
-                            width: 100%;
-                            background-color: black;
-                            position: absolute;
-                            top: 0;
-                            opacity: 0%;
-                        }
-                    }
-                    .project-title{
-                        margin-top: 24px;
-                        margin-bottom: 12px;
-                        font-style: normal;
-                        font-family: 'Myriad-Pro-Bold';
-                        font-size: 32px;
-                        line-height: 38px;
-                        text-decoration: none !important;
-                        color: #000000;
-
-                        a{
-                            text-decoration: none !important;
-                            color: #000000;
-                        }
-                    }
-                    .project-votes{
-
-                        position: absolute;
-                        top: 19px;
-                        right: 20px;
-                    }
-                    .project-description{
-                        
-                        a:nth-child(1){
-
-                            text-decoration: none;
-                            color: black !important;
-
-                            &:hover{
-                                text-decoration: none;
-                                color: black !important;
-                            }
-                        }
-                        p{
-                            display: flex;
-                            flex-direction: column;
-
-                            a:nth-child(1){
-
-                                text-decoration: none;
-                                color: black !important;
-
-                                &:hover{
-                                    text-decoration: none;
-                                    color: black !important;
-                                }
-                            }
-
-                            a:nth-child(2){
-                                margin-top:19px;
-                                color: #000000;
-                                font-weight: bold;
-                                font-size: 16px;
-                                line-height: 19px;
-
-                                &:hover{
-                                    text-decoration: underline;
-                                }
-                            }
-                        }
-                    }
-                    &:hover >.project-description p a:nth-child(2){
-                        color: $pink-hover !important;
-                        transition: color $normal-duration-2 $ease-out;
-                    }
-                    &:hover >.project-image img{
-                        transform: scale(1.05);
-                        transition: transform $normal-duration-2 $ease-out;
-                    }
-                    &:hover >.project-image .overlay{
-                        opacity: 10%;
-                        transition: opacity $normal-duration-2 $ease-out;
-                    }
-                    &:active >.project-description p a:nth-child(2){
-                        color: $pink-pressed !important;
-                        transition: color $normal-duration-2 $ease-out;
-                    }
-                    &:active >.project-image img{
-                        transform: scale(1.07);
-                        transition: transform $normal-duration-2 $ease-out;
-                    }
-                    &:active >.project-image .overlay{
-                        opacity: 10%;
-                        transition: opacity $normal-duration-2 $ease-out;
+                        margin-bottom: 0px;
                     }
                 }
             }
